refactor ms-payment restructuring and improvements